2007-03-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (rglplot) : edge plotting rewritten

2007-03-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (rglplot) : support for loop edges

	* interfaces/R/igraph/R/plot.common.R (i.default.values) 
	* interfaces/R/igraph/R/plot.R (rglplot) : loop.angle2 argument added

2007-03-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (rglplot) : new parameter handling
	style added

	* interfaces/R/igraph/R/plot.R (plot.igraph)
	* interfaces/R/igraph/R/plot.common.R (i.default.values) : 
	loop.angle edge parameter added

	* interfaces/R/igraph/R/tkplot.R (tkplot) : new parameter handling 
	style added

	* interfaces/R/igraph/R/tkplot.R (tkplot) : added support for
	arrow.mode argument

	* interfaces/R/igraph/R/plot.R (plot.igraph) : modified for the 
	new parameter handling
	* interfaces/R/igraph/R/plot.common.R (i.parse.plot.params)
	(i.default.values) : added, new parameter handling

	* interfaces/R/igraph/R/plot.common.R (plot.igraph) : make the margin
	bigger with the size of the vertices

	* interfaces/R/igraph/R/plot.R (plot.igraph) :
	bug corrected, arrows were drawn improperly when any(edge.lty!=1)

2007-03-19  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (rglplot.igraph) :
	suspend updating while plotting the graph

	* interfaces/R/igraph/R/plot.R (rglplot.igraph) :
	1) plotting edges as boxes
	2) plotting arrows 
	3) arrow.mode argument added
	4) layout argument can be a 2d layout as well
	5) warnings about labels and edge.labels eliminated
	6) the '00' label bug corrected 

2007-03-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (barabasi.game) : bug corrected,
	call nonlinear game is zero.appeal is not 1

	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_ditedcat) :
	bug corrected, sd was never calculated

2007-03-16  Gabor Csardi  <csardi@rmki.kfki.hu>
